/buy ominaisuus päivitetty niin, että jokaisen otuksen ostokoodia ei tarvitse kirjoittaa erikseen.

--- a/templates/shop.html
+++ b/templates/shop.html
@@ -21,18 +21,20 @@
     <br/>
     <a href="/logout">Kirjaudu ulos</a>
     <br/>
+    <a href="/giftcodes">Onko sinulla lahjakoodi? Klikkaa tästä.</a>
 <img src="/static/haukerias.png"
            width="400"
            height="auto"/>
 <br/>  
 <p> Haukerias: {{haukerias_price}} köntsäkolikkoa</p>
-<a href="/buyhaukerias">Osta</a> <br/>
+<a href="/buy/haukerias">Osta</a> <br/>
 <img src="/static/lohari.jpg"
           width="400"
           height="auto">
 <br/>
 <p>Lohari: {{lohari_price}} köntsäkolikkoa</p>
-<a href="/buylohari">Osta</a>
+<br/>
+<a href="/buy/lohari">Osta</a>
 <br/>
 
 </body>
