--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-<form action="/signup" method="POST">
-Käyttäjätunnus: <input type="text" name="username"> <br>
-Salasana: <input type="password" name="password"> <br>
-<input type="submit" value="Luo tunnus"> <br>
-</form>
-Onko sinulla jo tunnus? <a href="/">Kirjaudu sisään</a>
+<html>
+    <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    </head>
+
+
+    <body>
+        <form action="/signup" method="POST">
+        Käyttäjätunnus: <input type="text" name="username"> <br>
+        Salasana: <input type="password" name="password"> <br>
+        <input type="submit" value="Luo tunnus"> <br>
+    </form>
+    Onko sinulla jo tunnus? <a href="/">Kirjaudu sisään</a>
+    </body>
+</html>
