Lisää taidetta, haukeriaan kuvaa paranneltu

--- a/templates/shop.html
+++ b/templates/shop.html
@@ -30,7 +30,7 @@
 <br/>  
 <p> Haukerias: {{haukerias_price}} köntsäkolikkoa</p>
 <a href="/buy/haukerias">Osta</a> <br/>
-<img src="/static/lohari.jpg"
+<img src="/static/lohari.png"
           width="400"
           height="auto">
 <br/>
