--- a/templates/giftcodes.html
+++ b/templates/giftcodes.html
@@ -8,7 +8,7 @@
         <title>Lunasta lahjakoodi</title>
     </head>
 
-    <body>
+    <body style="background-color: #1a1a1b; color: #d2d7d8">
         
     </body>
 </html>
