--- a/templates/shop.html
+++ b/templates/shop.html
@@ -5,7 +5,8 @@
 <title>Kauppa</title>
 </head>
 
-<body>
+<body style="background-color: #1a1a1b; color: #d2d7d8">
+  <center>
   {%block title%}
   <h1>Kauppa</h1>
     {% with messages = get_flashed_messages() %}
@@ -38,5 +39,5 @@
 <br/>
 <a href="/buy/lohari">Osta</a>
 <br/>
-
+  </center>
 </body>
