--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,12 +7,14 @@
     </head>
 
 
-    <body>
+    <body style="background-color: #1a1a1b; color: #d2d7d8">
+        <center>
         <form action="/signup" method="POST">
         Käyttäjätunnus: <input type="text" name="username"> <br>
         Salasana: <input type="password" name="password"> <br>
         <input type="submit" value="Luo tunnus"> <br>
     </form>
     Onko sinulla jo tunnus? <a href="/">Kirjaudu sisään</a>
+        </center>
     </body>
 </html>
