--- a/templates/forum.html
+++ b/templates/forum.html
@@ -8,7 +8,8 @@
         <title>Foorumi</title>
     </head>
 
-    <body>
+    <body style="background-color: #1a1a1b; color: #d2d7d8">
+        <center>
         {% with flashes = get_flashed_messages() %}
            {% if flashes %}
                <ul class=flashes>
@@ -27,6 +28,7 @@
         <hr>
         {% endfor %}
         <a href="/newmessage">Lähetä viesti</a>
+        </center>
      
     </body>
 </html>
