--- a/templates/giftcodes.html
+++ b/templates/giftcodes.html
@@ -10,5 +10,12 @@
 
     <body style="background-color: #1a1a1b; color: #d2d7d8">
         
+        <form action="/send" method="POST">
+            lahjakoodi: <br>
+            <textarea name="content" rows="3" cols="40"></textarea>
+            <br>
+            <input type="submit" value="Lähetä">
+            </form>
+        
     </body>
 </html>
