--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
   <body style="background-color: #1a1a1b; color: #d2d7d8">
     {%block title%}
-    <center><h1>Otuskauppa</h1></center>
+    <center><h1>Otustarha</h1></center>
     {% with messages = get_flashed_messages() %}
        {% if messages %}
          <ul class=flashes>
