--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -24,6 +24,7 @@
         <a href="/mycreatures">Omat otukset</a>
         <a href="/forum">Keskustelupalsta</a>
         <br>
+        <a href="/giftcodes">Lahjakoodin lunastus</a>
         <a href="/logout">Kirjaudu ulos</a>
         {%endblock%}
         </center>
