--- a/templates/shop.html
+++ b/templates/shop.html
@@ -20,7 +20,7 @@
      {%endif%}
      {% endwith %}
     {%endblock%}
-    <p>Varat: {{session.money}} köntsäkolikkoa</p>
+    <p>Varat: {{session.money}} kultarahaa</p>
     <a href="/mypage">Takaisin omalle sivulle</a>
     <a href="/logout">Kirjaudu ulos</a>
     <a href="/giftcodes">Onko sinulla lahjakoodi? Klikkaa tästä.</a>
@@ -29,13 +29,13 @@
            width="400"
            height="auto"/>
 <br/>  
-<p> Haukerias: {{haukerias_price}} köntsäkolikkoa</p>
+<p> Haukerias: {{haukerias_price}} kultarahaa/p>
 <a href="/buy/haukerias">Osta</a> <br/>
 <img src="/static/lohari.png"
           width="400"
           height="auto">
 <br/>
-<p>Lohari: {{lohari_price}} köntsäkolikkoa</p>
+<p>Lohari: {{lohari_price}} kultarahaa</p>
 <br/>
 <a href="/buy/lohari">Osta</a>
 <br/>
